--- a/1.Splunk Fundamentals.md
+++ b/1.Splunk Fundamentals.md
@@ -3,12 +3,12 @@
 - Splunk Enterprise is a software platform that aggregates and allows search, analysis, and visualization of your infrastructure and host network. 
 - Splunk provides real-time visibility to automate the collection, indexing, and alerting of machine data. It also provides machine learning capabilities with artificial intelligence for predictive reporting.
 
-### Installing Splunk
-﻿A new Splunk installation requires configuration to set up the application, as well as tune it to the environment. This section of the module covers how to install and configure Splunk.
+#### Installing Splunk
+﻿A new Splunk installation requires configuration to set up the application, as well as tune it to the environment.
 ﻿
-### Logging in to Splunk
+#### Logging in to Splunk
 ﻿This section covers how to access a fresh Splunk installation and enable secure access by enabling Secure Sockets Layer (SSL) encryption via either the command line or the web application interface.
 ﻿
-### Splunk Data Ingest
+#### Splunk Data Ingest
 ﻿After Splunk is installed and configured, data can be imported for parsing. Once data is loaded, it can be queried and additional search fields can be configured. Adding additional fields to manipulate data can provide context to statistical analysis, and enable quicker searches.
 ﻿
