--- a/1.Splunk Fundamentals.md
+++ b/1.Splunk Fundamentals.md
@@ -13,3 +13,8 @@
 ﻿After Splunk is installed and configured, data can be imported for parsing. Once data is loaded, it can be queried and additional search fields can be configured. Adding additional fields to manipulate data can provide context to statistical analysis, and enable quicker searches.
 ﻿
 [c60ebf2b-cc62-42cc-b0e7-20933020f906](https://github.com/paulinoprojects/Splunk/assets/111991325/388305ec-28a9-4996-9dd6-35186259f398)
+
+- In Splunk environments, data forwarders are used to send data from host endpoints and infrastructure to the Splunk Enterprise indexer. Leveraging data forwarders to send data to an indexer allows for data aggregation at the indexer and for a centrally controlled repository of data for querying and analysis. 
+﻿
+- Data that is ingested into Splunk by manually-entered upload commands may work well in limited data sets but is not efficient when it comes to dynamic enterprise environments. In such environments, Splunk Technology Add-Ons (TAs) are crucial for keeping data sources consistent and reliable.
+﻿
