--- a/1.Splunk Fundamentals.md
+++ b/1.Splunk Fundamentals.md
@@ -19,3 +19,10 @@
 
 - Data that is ingested into Splunk by manually-entered upload commands may work well in limited data sets but is not efficient when it comes to dynamic enterprise environments. In such environments, Splunk Technology Add-Ons (TAs) are crucial for keeping data sources consistent and reliable.
 ﻿
+#### Getting Data In
+﻿
+- Splunk leverages Forwarders and Technology Add-Ons (TAs) to get data to an index. This section covers how to create and configure an index to receive data from a Splunk TA. Additionally, this section will cover how to install a Universal Forwarder on a Windows 10 host in order to receive log data.
+﻿
+#### Splunk Common Information Model
+﻿
+- Common Information Model (CIM) compliance is a way for various data sources to become normalized for efficient parsing and analysis. This section covers how to CIM map data that is not received from a Splunk TA.
