--- a/1.Splunk Fundamentals.md
+++ b/1.Splunk Fundamentals.md
@@ -26,3 +26,11 @@
 #### Splunk Common Information Model
 ﻿
 - Common Information Model (CIM) compliance is a way for various data sources to become normalized for efficient parsing and analysis. This section covers how to CIM map data that is not received from a Splunk TA.
+
+- Splunk uses the Common Information Model (CIM) for data normalization, which defines universal ways to refer to objects. The CIM is a shared semantic model focused on extracting value from data. Each data model in the CIM consists of a set of field names and tags that define the least common denominator of a domain of interest. Normalized data is critical for a functional Splunk deployment.
+
+#### ﻿Technology Add-On ((TA)
+- A Splunk Technology Add-on (TA) enhances the functionality of Splunk by normalizing data, which is often vendor-specific, into a CIM-compliant, normalized data stream. Splunk TAs provide search-time knowledge maps to normalize data for use within the Splunk application.
+﻿
+- TAs are integral to Splunk and are required additions to an enterprise environment that leverages Splunk. Without the use of TAs, data is not parsed and will remain in its organically generated format.
+﻿
